# ocg_demo_backend

./: data.json  db.sqlite3  pyproject.toml
invoicing/: admin.py  models.py  serializers.py  settings.py  urls.py  views.py
invoicing/management/commands/: seed_db.py
invoicing/migrations/: 0001_initial.py  0002_remove_customer_image_url_customer_image.py  0003_customer_user.py
invoicing/serializers/: __init__.py  invoicing_serializers.py  user_serializers.py
invoicing/static/ocg/rest_framework/: theme.css
invoicing/views/: __init__.py  dashboard_views.py  views.py
project/: settings.py  urls.py
templates/rest_framework/: api.html
